--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,27 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Code4Lib
+# email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://code4lib.org" # the base hostname & protocol for your site, e.g. http://example.com
+
+header_pages:
+  - about.md
+
+#  - music  last.fm's group pages taken down
+#  - https://shop.spreadshirt.com/code4lib/
+
+# external links are in _includes/header.html
+
+
+twitter_username: code4lib
+github_username:  code4lib
+youtube_username: code4lib
 
 # Build settings
 markdown: kramdown
