--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@
 title: Code4Lib
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  We are developers and technologists for libraries, museums, and archives who are dedicated to 
+  being a diverse and inclusive community, seeking to share ideas and build collaboration.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://code4lib.org" # the base hostname & protocol for your site, e.g. http://example.com
 
