--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   being a diverse and inclusive community, seeking to share ideas and build collaboration.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://code4lib.org" # the base hostname & protocol for your site, e.g. http://example.com
+logo: "/files/logo/c4l_logo/c4l_logo.RGB_400px.png"
 
 header_pages:
   - about.md
