--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://code4lib.org" # the base hostname & protocol for your site, e.g. http://example.com
 logo: "/files/logo/c4l_logo/c4l_logo.RGB_400px.png"
+logo_alt: "Code4Lib"
 
 header_pages:
   - about.md
