--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://code4lib.org" # the base hostname & protocol for your site, e.g. http://example.com
 logo: "/files/logo/c4l_logo/c4l_logo.RGB_400px.png"
 logo_alt: "Code4Lib"
+include: ['_pages']
 
 header_pages:
   - about.md
